Used Better fonts and improved some code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap"
 			rel="stylesheet"
 		/>
 		<link
@@ -149,71 +149,47 @@
 		</section>
 		<section class="lookbook-main" id="Lookbook">
 			<span>Our Lookbook</span>
-			<!-- <div class="lookbook">
-				<img src="assets/img/pexels-des-1.jpg" alt="" class="style-img-1" />
-				<img
-					src="assets/img/pexels-designer-1.jpg"
-					alt=""
-					class="style-img-1 style-middle"
-				/>
-				<img src="assets/img/pexels-designer-2.jpg" alt="" class="style-img-1" />
+			<!-- Slideshow container -->
+			<div class="slideshow-container">
+				<div class="mySlides fade">
+					<div class="numbertext">1 / 4</div>
+					<img
+						src="http://drive.google.com/uc?export=view&id=1fDg1OEYu3SmcPRJPZ26E42K2N7JBJ6z_"
+						style="width: 100%"
+					/>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">2 / 4</div>
+					<img
+						src="http://drive.google.com/uc?export=view&id=1nyB5ReiXGifUPUe094KDfaCkfoEXfgYd"
+						style="width: 100%"
+					/>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">3 / 4</div>
+					<img
+						src="http://drive.google.com/uc?export=view&id=1B76pnPdejIGRQyt66VI7BU3E5ixupfCG"
+						style="width: 100%"
+					/>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">4 / 4</div>
+					<img
+						src="http://drive.google.com/uc?export=view&id=1MB2zIjpMpSLqskDa3S-1fpH-4pRdm5HA"
+						style="width: 100%"
+					/>
+				</div>
 			</div>
-			<div class="lookbook">
-				<img src="assets/img/pexels-designer-3.jpg" alt="" class="style-img-1" />
-				<img
-					src="./pexels-pixabay-159780.jpg"
-					alt=""
-					class="style-img-1 style-middle"
-				/>
-				<img src="./video-pics.png" alt="" class="style-img-1" />
-			</div> -->
 		</section>
 
-		<!-- Slideshow container -->
-		<div class="slideshow-container">
-			<div class="mySlides fade">
-				<div class="numbertext">1 / 4</div>
-				<img
-					src="http://drive.google.com/uc?export=view&id=1fDg1OEYu3SmcPRJPZ26E42K2N7JBJ6z_"
-					style="width: 100%"
-				/>
+		<footer id="three" class="contactus">
+			<div class="infofooter">
+				<h2>Get in touch</h2>
+				<p>You can contact us here to get future updates from our side</p>
 			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext">2 / 4</div>
-				<img
-					src="http://drive.google.com/uc?export=view&id=1nyB5ReiXGifUPUe094KDfaCkfoEXfgYd"
-					style="width: 100%"
-				/>
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext">3 / 4</div>
-				<img
-					src="http://drive.google.com/uc?export=view&id=1B76pnPdejIGRQyt66VI7BU3E5ixupfCG"
-					style="width: 100%"
-				/>
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext">4 / 4</div>
-				<img
-					src="http://drive.google.com/uc?export=view&id=1MB2zIjpMpSLqskDa3S-1fpH-4pRdm5HA"
-					style="width: 100%"
-				/>
-			</div>
-		</div>
-		<br />
-
-		<div style="text-align: center">
-			<span class="dot"></span>
-			<span class="dot"></span>
-			<span class="dot"></span>
-			<span class="dot"></span>
-		</div>
-		<section id="three" class="contactus">
-			<h2>Get in touch</h2>
-			<p>You can contact us here to get future updates from our side</p>
 
 			<div class="split style1">
 				<section class="inputForm">
@@ -313,7 +289,7 @@
 					</ul>
 				</section>
 			</div>
-		</section>
+		</footer>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
